@startuml

title __PLANE's Class Diagram__\n

  namespace by.bsu.airportTest.entity {
    namespace plane {
      class by.bsu.airportTest.entity.plane.ExperimentalPlane {
          + ExperimentalPlane()
          + equals()
          + getClassificationLevel()
          + hashCode()
          + setClassificationLevel()
          + toString()
      }
    }
  }
  

  namespace by.bsu.airportTest.entity {
    namespace plane {
      class by.bsu.airportTest.entity.plane.MilitaryPlane {
          + MilitaryPlane()
          + equals()
          + getType()
          + hashCode()
          + toString()
      }
    }
  }
  

  namespace by.bsu.airportTest.entity {
    namespace plane {
      class by.bsu.airportTest.entity.plane.PassengerPlane {
          - passengersCapacity : int
          + PassengerPlane()
          + equals()
          + getPassengersCapacity()
          + hashCode()
          + toString()
      }
    }
  }
  

  namespace by.bsu.airportTest.entity {
    namespace plane {
      abstract class by.bsu.airportTest.entity.plane.Plane {
          ~ model : String
          - maxFlightDistance : int
          - maxLoadCapacity : int
          - maxSpeed : int
          + Get_Max_Flight_Distance()
          + Plane()
          + equals()
          + getMS()
          + getMaxLoadCapacity()
          + getModel()
          + hashCode()
          + toString()
      }
    }
  }
  

  by.bsu.airportTest.entity.plane.ExperimentalPlane -up-|> by.bsu.airportTest.entity.plane.Plane
  by.bsu.airportTest.entity.plane.ExperimentalPlane o-- by.bsu.airportTest.model.ClassificationLevel : classificationLevel
  by.bsu.airportTest.entity.plane.ExperimentalPlane o-- by.bsu.airportTest.model.ExperimentalType : type
  by.bsu.airportTest.entity.plane.MilitaryPlane -up-|> by.bsu.airportTest.entity.plane.Plane
  by.bsu.airportTest.entity.plane.MilitaryPlane o-- by.bsu.airportTest.model.MilitaryType : type
  by.bsu.airportTest.entity.plane.PassengerPlane -up-|> by.bsu.airportTest.entity.plane.Plane


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
